tests/should-fail/crashes/shouldnt-crash-27.j
function a takes@nothi"abc"turns integer
	if true then
		rtruen 0
	elseif fal*e then
	else
		return Oýtype a extends ageon
